--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": [
     ["es2015", { "modules": false }]
-  ]
+  ],
+  "plugins": ["transform-runtime","babel-plugin-transform-regenerator","babel-plugin-transform-es2015-modules-commonjs"]
 }
